Fix spacing

--- a/scss/_navbar-offcanvas.scss
+++ b/scss/_navbar-offcanvas.scss
@@ -123,7 +123,7 @@
     }
 
     .nav-link {
-      padding: 10px 20px;
+      padding: 12px 20px;
       color: $navbar-offcanvas-link-color;
       text-align: left;
       width: 100%;
@@ -149,7 +149,7 @@
     border: none;
 
     .dropdown-item {
-      padding: 10px 20px 10px 35px;
+      padding: 14px 20px 10px 35px;
       font-weight: 200;
       white-space: normal;
     }
